# lab6

./: lab6.sln
lab6/: CMakeLists.txt  filling_and_checking.cpp  filling_and_checking.h  isequal.cpp  isequal.h  isprime.cpp  isprime.h  lab6.cpp  lab6.vcxproj  lab6.vcxproj.filters  printing.cpp  printing.h  sorting.cpp  sorting.h  swaping.cpp  swaping.h
